--- a/app/src/main/res/layout/content_music.xml
+++ b/app/src/main/res/layout/content_music.xml
@@ -3,32 +3,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:layout_height="wrap_content">
 
-    <!--<ImageButton-->
-        <!--android:id="@+id/informacao_image_button"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="1"-->
-        <!--app:srcCompat="@android:drawable/ic_menu_preferences"/>-->
-
-
-    <TextView
-        android:id="@+id/track_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
+    <ImageButton
+        android:id="@+id/play_image_button"
         android:layout_weight="1"
-        android:textColor="@android:color/black" />
+        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        android:src="@android:drawable/ic_media_play" />
+
+
+    <!--<TextView-->
+        <!--android:id="@+id/track_text_view"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:textColor="@android:color/black" />-->
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="4dp"
         android:layout_weight="6"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginLeft="4dp">
 
         <TextView
             android:id="@+id/title_text_view"
@@ -61,11 +64,20 @@
         </LinearLayout>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/duracao_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/detalhe_image_button"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textColor="@android:color/black" />
+        android:layout_width="0dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/detalhe" />
+
+    <!--<TextView-->
+        <!--android:id="@+id/duracao_text_view"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:textColor="@android:color/black" />-->
 
 </LinearLayout>
