--- a/app/src/main/res/layout/activity_local.xml
+++ b/app/src/main/res/layout/activity_local.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_inicio"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.pedrazzani.android.mymusicapp.LocalActivity">
+    tools:context="br.com.pedrazzani.android.mymusicapp.BibliotecaLocalActivity">
 
     <ListView
         android:id="@+id/lista_local_musica"
